--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(EgyptAdventure)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(EgyptAdventure main.cpp)
+add_executable(EgyptAdventure src/main.cpp)
