ms 4 done but not running

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(EgyptAdventure)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+include_directories(include)
+include_directories(include/enums)
+
 add_executable(EgyptAdventure src/main.cpp)
 
 if (WIN32)
