Add functional interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 include_directories(include)
 include_directories(include/enums)
 
-add_executable(EgyptAdventure src/main.cpp)
+
+add_executable(EgyptAdventure 
+    src/main.cpp 
+    src/Map.cpp 
+    src/Tile.cpp 
+    src/Item.cpp 
+    src/Entity.cpp
+    src/Player.cpp
+    src/Torch.cpp
+)
 
 if (WIN32)
     target_link_libraries(EgyptAdventure winmm)
 endif()
-
-add_custom_command(TARGET EgyptAdventure
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E echo "Running EgyptAdventure..."
-    COMMAND ${CMAKE_COMMAND} -E env PATH=$<TARGET_FILE_DIR:EgyptAdventure> $<TARGET_FILE:EgyptAdventure>
-)
