final battle system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,16 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
-add_executable(EgyptAdventure ${SOURCES}
-        src/Effect.cpp
-        include/effects/HealEffect.hpp
-        src/HealEffect.cpp
-        include/effects/EffectManager.hpp
-        src/EffectManager.cpp
-        include/items/HealPotion.hpp
-        src/HealPotion.cpp)
+add_library(EgyptAdventureLib ${SOURCES})
+
+add_executable(EgyptAdventure src/main.cpp)
+target_link_libraries(EgyptAdventure PRIVATE EgyptAdventureLib)
+
+add_executable(battle_test "test/battleTest.cpp")
+target_link_libraries(battle_test PRIVATE EgyptAdventureLib)
+
+add_test(NAME BattleTest COMMAND battle_test)
 
 if (WIN32)
-    target_link_libraries(EgyptAdventure winmm)
+    target_link_libraries(EgyptAdventureLib winmm)
 endif()
