make collision check, few other things

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,15 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_library(EgyptAdventureLib ${SOURCES}
         src/map/decorators/ItemDecorator.cpp
-        src/map/decorators/ItemDecorator.hpp)
+        src/map/decorators/ItemDecorator.hpp
+        src/modifiers/Modifier.hpp
+        src/modifiers/PhysicalDamageModifier.hpp
+        src/modifiers/MagicalDamageModifier.hpp
+        src/modifiers/HealthModifier.hpp
+        src/modifiers/PriorityModifier.hpp
+        src/modifiers/DodgeChanceModifier.hpp
+        src/modifiers/DefenseModifier.hpp
+        src/items/Torch.hpp)
 
 add_executable(EgyptAdventure src/main.cpp)
 target_link_libraries(EgyptAdventure PRIVATE EgyptAdventureLib)
