--- a/assets/configs/config.json
+++ b/assets/configs/config.json
@@ -8,7 +8,8 @@
   "Scarab": {
     "name": "Scarab",
     "attackRange": 1,
-    "attackDamage": 5.0,
+    "physicalDamage": 5.0,
+    "magicalDamage": 0.0,
     "health": 15.0,
     "defense": 0.1,
     "priority": 1.0,
@@ -20,7 +21,8 @@
   "Skeleton": {
     "name": "Skeleton",
     "attackRange": 3,
-    "attackDamage": 20.0,
+    "physicalDamage": 20.0,
+    "magicalDamage": 0.0,
     "health": 30.0,
     "defense": 0.2,
     "priority": 1.5,
@@ -32,7 +34,8 @@
   "Mummy": {
     "name": "Mummy",
     "attackRange": 2,
-    "attackDamage": 30.0,
+    "physicalDamage": 30.0,
+    "magicalDamage": 15.0,
     "health": 50.0,
     "defense": 0.3,
     "priority": 2.0,
@@ -44,7 +47,8 @@
   "Phantom": {
     "name": "Phantom",
     "attackRange": 3,
-    "attackDamage": 30.0,
+    "physicalDamage": 20.0,
+    "magicalDamage": 40.0,
     "health": 60.0,
     "defense": 0.4,
     "priority": 3.0,
@@ -56,7 +60,8 @@
   "SandGolem": {
     "name": "SandGolem",
     "attackRange": 1,
-    "attackDamage": 50.0,
+    "physicalDamage": 50.0,
+    "magicalDamage": 40.0,
     "health": 200.0,
     "defense": 0.5,
     "priority": 4.0,
