--- a/assets/configs/config.json
+++ b/assets/configs/config.json
@@ -19,12 +19,26 @@
     "z": 1,
     "symbol": "S"
   },
+  "Scarab2": {
+    "name": "Scarab",
+    "attackRange": 1,
+    "physicalDamage": 8.0,
+    "magicalDamage": 2.0,
+    "health": 25.0,
+    "defense": 0.15,
+    "priority": 1.2,
+    "dodgeChance": 0.08,
+    "x": 1,
+    "y": 1,
+    "z": 1,
+    "symbol": "S"
+  },
   "Skeleton": {
     "name": "Skeleton",
     "attackRange": 4,
-    "physicalDamage": 20.0,
+    "physicalDamage": 10.0,
     "magicalDamage": 0.0,
-    "health": 30.0,
+    "health": 20.0,
     "defense": 0.2,
     "priority": 1.5,
     "dodgeChance": 0.1,
@@ -33,10 +47,24 @@
     "z": 1,
     "symbol": "K"
   },
+  "Skeleton2": {
+    "name": "Skeleton",
+    "attackRange": 4,
+    "physicalDamage": 15.0,
+    "magicalDamage": 0.0,
+    "health": 35.0,
+    "defense": 0.25,
+    "priority": 1.8,
+    "dodgeChance": 0.15,
+    "x": 1,
+    "y": 1,
+    "z": 1,
+    "symbol": "K"
+  },
   "Mummy": {
     "name": "Mummy",
     "attackRange": 2,
-    "physicalDamage": 2.0,
+    "physicalDamage": 10.0,
     "magicalDamage": 0.0,
     "health": 50.0,
     "defense": 0.3,
@@ -61,15 +89,29 @@
     "z": 1,
     "symbol": "P"
   },
+  "Phantom2": {
+    "name": "Phantom",
+    "attackRange": 3,
+    "physicalDamage": 30.0,
+    "magicalDamage": 50.0,
+    "health": 80.0,
+    "defense": 0.5,
+    "priority": 3.5,
+    "dodgeChance": 0.3,
+    "x": 1,
+    "y": 1,
+    "z": 1,
+    "symbol": "P"
+  },
   "SandGolem": {
     "name": "SandGolem",
     "attackRange": 1,
-    "physicalDamage": 1.0,
-    "magicalDamage": 1.0,
-    "health": 2.0,
-    "defense": 0.5,
+    "physicalDamage": 25.0,
+    "magicalDamage": 15.0,
+    "health": 100.0,
+    "defense": 0.6,
     "priority": 4.0,
-    "dodgeChance": 0.3,
+    "dodgeChance": 0.35,
     "x": 1,
     "y": 1,
     "z": 1,
