--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ add_library(EgyptAdventureLib ${SOURCES}
         src/commands/InventoryCommand.hpp
         src/commands/AmuletsMenuCommand.cpp
         src/commands/AmuletsMenuCommand.hpp
-        src/items/TutankhamunsСrown.cpp
-        src/items/TutankhamunsСrown.hpp)
+        src/items/TutankhamunsCrown.cpp
+        src/items/TutankhamunsCrown.hpp)
 
 add_executable(EgyptAdventure src/main.cpp)
 target_link_libraries(EgyptAdventure PRIVATE EgyptAdventureLib)
